--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,13 @@
+2023-12-07  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* CHANGES.txt:   Added support for the new <TouchpadScroll> event.
+	* scripts/*.tcl:
+	* doc/*.html:
+
+	* scripts/tclIndex: Newly generated.
+
+	* doc/ScrollableFrmDemo2.png: Updated screenshot.
+
 2023-10-07  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 2.0; dropped the support
