--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -11,7 +11,9 @@ What is new in Tablelist 7.0?
 3. Added explicit support for the themes "black", "breeze",
    "breeze-dark", "sun-valley-light", and "sun-valley-dark".
 
-4. Improved the compatibility with Tcl 9 and Tk 8.7/9.
+4. Improved the compatibility with Tcl 9 and Tk 8.7/9.  For example,
+   added support for the new <TouchpadScroll> event, introduced in Tk
+   8.7 and 9.
 
 5. Removed the now redundant distribution file "repair.tcl".
 
