--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,9 @@
+2023-12-07 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* CHANGES.txt:              Added support for the new <TouchpadScroll>
+	* scripts/*.tcl:            event.
+	* doc/tablelistWidget.html:
+
 2023-10-07 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.0; dropped the support
