--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,7 @@
+2023-12-27  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Wcb 4.0.
+
 2023-10-07  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.0; dropped the support
