--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2023-12-27  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.0.
+
 2023-12-07  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:   Added support for the new <TouchpadScroll> event.
