--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2023-12-27 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.0.
+
 2023-12-07 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:              Added support for the new <TouchpadScroll>
