--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -1,5 +1,33 @@
-What is new in Tablelist 7.0?
+What is new in Tablelist 7.1?
 -----------------------------
+
+1. The multi-line cell texts are now displayed vertically centered
+   within their rows, just like the single-line ones (thanks to Harald
+   Oehlmann for his proposal).
+
+2. Fixed a long-standing bug due to which under some circumstances the
+   default values of several configuration options became theme-specific
+   even if the tablelist package rather than tablelist_tile was being
+   used.
+
+3. Fixed a long-standing bug related to creating the expand/collapse
+   control images when handling the "-treestyle" option (thanks to
+   Nicolas Bats for his bug report).
+
+4. Guarded against destroying a tablelist widget (e.g, by an "after"
+   callback) in which an interactive column resize or row/column move
+   operation is in progress (thanks to Ulrich Seidl for his bug report).
+
+5. Handled the extremely rare case that the frame widget to be used as
+   parent of the edit window already exists (again, thanks to Ulrich
+   Seidl for his bug report).
+
+6. Fixed a typo in the mega-widget utility file mwutil.tcl, introduced
+   in the previous release (thanks to Harald Oehlmann for his bug
+   report).
+
+What was new in Tablelist 7.0?
+------------------------------
 
 1. Dropped the support for Tk versions earlier than 8.4.  This has made
    the code simpler and easier to maintain.
