--- a/modules/scrollutil/CHANGES.txt
+++ b/modules/scrollutil/CHANGES.txt
@@ -1,5 +1,12 @@
-What is new in Scrollutil 2.0?
+What is new in Scrollutil 2.1?
 ------------------------------
+
+1. Fixed a typo in the mega-widget utility file mwutil.tcl, introduced
+   in the previous release (thanks to Harald Oehlmann for his bug
+   report).
+
+What was new in Scrollutil 2.0?
+-------------------------------
 
 1. Dropped the support for Tk versions earlier than 8.4.  This has made
    the code simpler and easier to maintain.
