--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2024-03-05  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.1.
+
 2024-02-11  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 2.1.
