--- a/modules/tooltip/ChangeLog
+++ b/modules/tooltip/ChangeLog
@@ -1,3 +1,11 @@
+2024-05-05  Csaba Nemethi  <csaba.nemethi@t-online.de>
+
+	* pkgIndex.tcl:	Bumped the tooltip version number to 1.7.
+
+	* tooltip.tcl:	Added support for ttk::treeview column headings (based
+	* tooltip.man:	on a patch submitted by Mathias Kende); bumped the
+			version number to 1.7 (fix for ticket [2895994fff]).
+
 2022-08-22  Csaba Nemethi  <csaba.nemethi@t-online.de>
 
 	* pkgIndex.tcl:	Bumped the tooltip version number to 1.6.
