--- a/modules/scrollutil/CHANGES.txt
+++ b/modules/scrollutil/CHANGES.txt
@@ -5,6 +5,9 @@ What is new in Scrollutil 2.2?
    themepatch code and the demo scripts, by explicitly specifying the
    "-format" option.
 
+2. Adapted the scaleutil package to the recent improvements in the
+   "classic" theme by Emiliano Gavilan.
+
 What was new in Scrollutil 2.1?
 -------------------------------
 
