--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,10 @@
+2024-05-11 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* CHANGES.txt:                 Adapted the scaleutil package to the
+	* tablelistCommon.tcl:         recent improvements in the "classic"
+	* scripts/utils/pkgIndex.tcl:  theme by Emiliano Gavilan.
+	* scripts/utils/scaleutil.tcl:
+
 2024-05-07 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:                 Eliminated the temporary hang-ups
