--- a/modules/mentry/CHANGES.txt
+++ b/modules/mentry/CHANGES.txt
@@ -4,6 +4,9 @@ What is new in Mentry 4.2?
 1. Adapted to the recent improvements in the "classic" theme by Emiliano
    Gavilan.
 
+2. Adapted the default value of the "-selectborderwidth" option in
+   Mentry_tile to recent changes in the "default" and "classic" themes.
+
 What was new in Mentry 4.1?
 ---------------------------
 
