--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -31,8 +31,9 @@ What is new in Tablelist 7.2?
 7. Adapted the scaleutil package to the recent improvements in the
    "classic" theme by Emiliano Gavilan.
 
-8. For compatibility with Tcl 9, changed "tk_version" to "::tk_version"
-   in the demo scripts "browse*.tcl" (which use a namespace).
+8. Adapted the default value of the "-selectborderwidth" option in
+   Tablelist_tile to recent changes in the "default" and "classic"
+   themes.
 
 9. Eliminated the temporary hang-ups experienced sporadically during
    scrolling in the presence of many embedded images (including tree
