--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2024-05-15  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.2.
+
 2024-05-14  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:              Adapted the default value of the
