--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2024-05-12  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.2.
+
 2024-05-11  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:                 Adapted the scaleutil package to the
