--- a/modules/tooltip/tooltip.man
+++ b/modules/tooltip/tooltip.man
@@ -1,15 +1,17 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin tooltip n 1.7]
+[vset VERSION 1.7.1]
+[manpage_begin tooltip n [vset VERSION]]
 [keywords balloon]
 [keywords help]
 [keywords hover]
 [keywords tooltip]
 [copyright {1996-2008, Jeffrey Hobbs}]
+[copyright {2024 Emmanuel Frecon}]
 [moddesc   {Tooltip management}]
 [titledesc {Tooltip management}]
 [require Tcl 8.5]
 [require msgcat 1.3]
-[require tooltip [opt 1.7]]
+[require tooltip [opt [vset VERSION]]]
 [description]
 [para]
 
