tooltip - tooltip - ticket [803a13c9f0] <EF> Support images in tooltips, and an additional info field.
Supercedes ticket [2970577] and the associated commit [3a592d1145b113c7] (now off trunk and hidden).

Bumped version to 1.8.
Thanks to Rene Zaumseil for the ticket, patch, and so much patience.

Regenerated tooltip documentation (version bump)

--- a/modules/tooltip/ChangeLog
+++ b/modules/tooltip/ChangeLog
@@ -1,3 +1,9 @@
+2024-05-23  Andreas Kupries <andreas.kupries@gmail.com>
+
+	* Bumped to version 1.8. Support images and additional info text.
+	  Ticket [https://core.tcl-lang.org/tklib/tktview/803a13c9f0].
+	  Patch by Rene Zaumseil.
+
 2024-05-22  Andreas Kupries <andreas.kupries@gmail.com>
 
 	* Bumped to version 1.7.1. Bail if widget goes away during early
