--- a/modules/tooltip/tooltip.man
+++ b/modules/tooltip/tooltip.man
@@ -76,7 +76,8 @@ This command arranges for widget [arg pathName] to display a tooltip with a
 [arg message]. The tooltip uses late-binding [package msgcat] calls to allow
 for on-the-fly language changes in an application.
 The namespace where [cmd ::tooltip::tooltip] is invoked is used to resolve
-msgcat, if not overwritten by the [arg -namespace] option.
+[cmd msgcat::mc], if not overwritten by the [arg -namespace] option.
+The format parameters to the [cmd msgcat::mc] call may be given by the options [arg -msgargs] and [args -infoargs] for the message and info part.
 
 If the widget specified is a [cmd menu], [cmd canvas], [cmd listbox], [cmd ttk::treeview],
 [cmd ttk::notebook] or [cmd text] widget then additional options are used to tie the
