--- a/modules/tooltip/tooltip.man
+++ b/modules/tooltip/tooltip.man
@@ -74,15 +74,17 @@ Enables tooltips for defined widgets.
 
 This command arranges for widget [arg pathName] to display a tooltip with a
 [arg message]. The tooltip uses late-binding [package msgcat] calls to allow
-for on-the-fly language changes in an application.
-The namespace where [cmd ::tooltip::tooltip] is invoked is used to resolve
-[cmd msgcat::mc], if not overwritten by the [arg -namespace] option.
-The format parameters to the [cmd msgcat::mc] call may be given by the options [arg -msgargs] and [args -infoargs] for the message and info part.
+for on-the-fly language changes in an application. These calls are resolved
+by default in the namespace active where [cmd ::tooltip::tooltip] is invoked.
+Using option [option -namespace] overwrites this default with a user-specified
+value. Furthermore, using the options [option -msgargs] and/or [option -infoargs]
+enables the passing of additional arguments to these calls for the message
+and info text respectively.
 
-If the widget specified is a [cmd menu], [cmd canvas], [cmd listbox], [cmd ttk::treeview],
-[cmd ttk::notebook] or [cmd text] widget then additional options are used to tie the
-tooltip to specific menu, canvas or listbox items, ttk::treeview items or
-column headings, ttk::notebook tabs, or text widget tags.
+[para] If the specified widget is a [cmd menu], [cmd canvas], [cmd listbox],
+[cmd ttk::treeview], [cmd ttk::notebook] or [cmd text] widget then additional
+options are used to tie the tooltip to specific menu, canvas or listbox items,
+ttk::treeview items or column headings, ttk::notebook tabs, or text widget tags.
 
 [list_begin options]
 
