--- a/modules/plotchart/plotchart.man
+++ b/modules/plotchart/plotchart.man
@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin Plotchart n 2.5.1]
+[manpage_begin Plotchart n 2.6.2]
 [copyright {2022 Arjen Markus <arjenmarkus@users.sourceforge.net>}]
 [moddesc   Plotchart]
 [titledesc {Simple plotting and charting package}]
 [require Tcl [opt 8.5]]
 [require Tk [opt 8.5]]
-[require Plotchart [opt 2.5.2]]
+[require Plotchart [opt 2.6.2]]
 
 [description]
 [para]
@@ -4367,6 +4367,8 @@ options were implemented to take care of date/time labels for stripcharts,
 as you can also use custom labels (the option -xlabels) if the axis is "static".
 Since this is not the case for stripcharts, this was not an option (Tcllib/Tklib bug 3613718).
 
+You can also specify the -locale option to get a localised date/time label.
+
 The example below illustrates how to use the -timeformat option. The -gmt option
 merely suppresses the handling of daylight saving time by the [lb]clock format[rb] command.
 
@@ -4381,6 +4383,9 @@ pack [canvas .c -width 500 -bg white]
 set start [clock scan  "0:00"]
 set stop  [clock scan "10:00"]
 set s [Plotchart::createStripchart .c [list $start $stop 7200] {0 10 1} -timeformat "%H:%M"]
+
+# With a locale like "de":
+#set s [Plotchart::createStripchart .c [list $start $stop 7200] {0 10 1} -timeformat "%H:%M" -locale de]
 
 foreach {x y} {0 0 2 5 5 2 9 9 12 10} {
     set x [expr {$start + 3600 * $x}] ;# Convert hour to clock seconds
