--- a/modules/tooltip/tooltip.man
+++ b/modules/tooltip/tooltip.man
@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[vset VERSION 1.8.2]
+[vset VERSION 2.0.0]
 [manpage_begin tooltip n [vset VERSION]]
 [keywords balloon]
 [keywords help]
@@ -10,7 +10,6 @@
 [moddesc   {Tooltip management}]
 [titledesc {Tooltip management}]
 [require Tcl 8.5]
-[require msgcat 1.3]
 [require tooltip [opt [vset VERSION]]]
 [description]
 [para]
@@ -73,14 +72,7 @@ Enables tooltips for defined widgets.
      [opt [const --]] [arg message]]
 
 This command arranges for widget [arg pathName] to display a tooltip with a
-[arg message]. The tooltip uses late-binding [package msgcat] calls to allow
-for on-the-fly language changes in an application. These calls are resolved
-by default in the namespace active where [cmd ::tooltip::tooltip] is invoked.
-Using option [option -namespace] overwrites this default with a user-specified
-value. Furthermore, using the options [option -msgargs] and/or [option -infoargs]
-enables the passing of additional arguments to these calls for the message
-and info text respectively.
-
+[arg message]. 
 [para] If the specified widget is a [cmd menu], [cmd canvas], [cmd listbox],
 [cmd ttk::treeview], [cmd ttk::notebook] or [cmd text] widget then additional
 options are used to tie the tooltip to specific menu, canvas or listbox items,
@@ -134,19 +126,6 @@ be returned. The widget must be a ttk::notebook widget.
 The [option -tag] option can be used to set a tooltip for a text widget tag.
 The tag should already be present when this command is called, or an error will
 be returned. The widget must be a text widget.
-
-[opt_def -namespace [arg namespace]]
-
-Set an explicit namespace for the msgcat::mc call. If not given, the caller
-namespace is used.
-
-[opt_def -msgargs [arg arglist]]
-
-This list of aguments is passed to the msgcat::mc call for the message text.
-
-[opt_def -infoargs [arg arglist]]
-
-This list of aguments is passed to the msgcat::mc call for the info call.
 
 [opt_def --]
 
@@ -214,3 +193,15 @@ tooltip::tooltip .txt -tag TIP-1 "tooltip one text"
 [vset CATEGORY tooltip]
 [include ../../support/devel/doc/feedback.inc]
 [manpage_end]
+
+[section {Migration from 1.x}]
+
+In version 2.0, any msgcat support was removed.
+The options [option -namespace], [option -msgargs] and [option -infoargs]
+were removed.
+With TCL 8.7, msgcat supports oo classes and oo methods.
+The oo caller environment was already lost on the late msgcat::mc
+invokation if a tooltip was shown, resulting in runtime errors.
+It was concluded as bad design to call msgcat late.
+The caller should reinstall the tooltips on eventual message change, like
+a language change.
