--- a/modules/tooltip/tooltip.man
+++ b/modules/tooltip/tooltip.man
@@ -190,18 +190,24 @@ pack [text .txt]
 tooltip::tooltip .txt -tag TIP-1 "tooltip one text"
 .txt insert end "An example of a " {} "tooltip" TIP-1 " tag.\n" {}
 }]
+
+[section {Migration from Version 1}]
+
+Version 1.3 to 1.7 called [cmd msgcat::mc] before a tooltip was shown,
+using the tooltip namespace.
+[cmd msgcat::mc] requires the caller environment.
+Due to that, version 1.8 recorded the caller namespace and used this
+in the call.
+
+In version 2.0, any [cmd msgcat::mc] support was removed.
+The options [option -namespace], [option -msgargs] and [option -infoargs]
+were removed.
+Starting with TCL 8.7, [cmd msgcat::mc] supports oo classes and oo methods.
+But the oo caller environment is not present when the [cmd msgcat::mc] was
+invoked on tooltip display, resulting in runtime errors.
+It was concluded as bad design to call [cmd msgcat::mc] late.
+The caller should reinstall the tooltips on eventual message change.
+
 [vset CATEGORY tooltip]
 [include ../../support/devel/doc/feedback.inc]
 [manpage_end]
-
-[section {Migration from 1.x}]
-
-In version 2.0, any msgcat support was removed.
-The options [option -namespace], [option -msgargs] and [option -infoargs]
-were removed.
-With TCL 8.7, msgcat supports oo classes and oo methods.
-The oo caller environment was already lost on the late msgcat::mc
-invokation if a tooltip was shown, resulting in runtime errors.
-It was concluded as bad design to call msgcat late.
-The caller should reinstall the tooltips on eventual message change, like
-a language change.
