--- a/modules/wcb/CHANGES.txt
+++ b/modules/wcb/CHANGES.txt
@@ -1,5 +1,16 @@
-What is new in Wcb 4.0?
+What is new in Wcb 4.1?
 -----------------------
+
+1. The demo script "listboxtest1.tcl" now correctly takes into account
+   that the names of all bitmap files in the directory "images" have the
+   suffix ".xbm", regardless of the Tk version being used.
+
+2. Restored the support for Tcl/Tk 8.4, which was broken due to the use
+   of package version numbers with a trailing "-" (thanks to Samuel
+   Brown for his bug report).
+
+What was new in Wcb 4.0?
+------------------------
 
 1. Dropped the support for Tk versions earlier than 8.4.  This has made
    the code simpler and easier to maintain.
@@ -8,9 +19,9 @@ What is new in Wcb 4.0?
    "cellselection add", "cellselection remove", and "cellselection
    toggle", added in Tk 8.7.
 
-3. The demo scripts listboxtest*.tcl no longer expect the images in the
-   directory $tk_library/demos/images, since in Tk 8.7 and later the Tk
-   demos directory has a different location.
+3. The demo scripts "listboxtest*.tcl" no longer expect the images in
+   the directory $tk_library/demos/images, since in Tk 8.7 and later the
+   Tk demos directory has a different location.
 
 What was new in Wcb 3.8?
 ------------------------
