--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,16 @@
+2024-08-20  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 4.1; restored the support
+	* COPYRIGHT.txt: for Tcl/Tk 8.4; updated the copyright information.
+	* README.txt:
+
+	* CHANGES.txt: Updated to reflect the changes.
+	* doc/*.html:
+
+	* ./../examples/wcb/listboxtest1.tcl: Now expects bitmap files whose
+	  names have the suffix ".xbm", regardless of the Tk version; updated
+	  the copyright information.
+
 2023-12-27  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Wcb 4.0.
