Tablelist: Updated for version 7.3. See the ChangeLog for details.

--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,23 @@
+2024-08-20 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 7.3; restored the support
+	* COPYRIGHT.txt: for Tcl/Tk 8.4.
+	* README.txt:
+
+	* CHANGES.txt: Updated to reflect the changes.
+	* doc/*.html:
+
+	* scripts/*.tcl: Improved the performance of "cellconfigure ... -text";
+	  guarded against the case that an embedded image was deleted; made
+	  sure that the handling of the <TouchpadScroll> event won't polluate
+	  the global namespace; adapted the handling of the <FocusIn> and
+	  <FocusOut> events to recent changes made in Tk related to these
+	  events and the detail field "NotifyInferior"; fixed a long-standing
+	  bug related to the optimization of item insertion; restored the
+	  support for Tcl/Tk 8.4.
+
+	* scripts/utils/*.tcl: Restored the support for Tcl/Tk 8.4.
+
 2024-05-15 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Tablelist 7.2.
