--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,7 @@
+2024-09-04  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Wcb 4.1.
+
 2024-08-20  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.1; restored the support
