--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2024-09-04  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.3.
+
 2024-08-20  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.3; restored the support
