--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2024-09-04 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.3.
+
 2024-08-20 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.3; restored the support
